# cpp-lib

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/mylib/: MyString.cpp  MyString.h  MyUniquePtr.cpp
test/: CMakeLists.txt  test_string.cpp
